[gd_scene load_steps=7 format=3 uid="uid://b2ra56potnvv8"]

[ext_resource type="Theme" uid="uid://cencj0im115lh" path="res://Themes/UP_Theme.tres" id="1_kry3j"]
[ext_resource type="Script" uid="uid://buj6t2xc6v634" path="res://Scripts/main.gd" id="2_21xkr"]
[ext_resource type="Texture2D" uid="uid://tkst6s4rv6gr" path="res://Assets/UP_Logo.png" id="3_kry3j"]
[ext_resource type="FontFile" uid="uid://bllh2efm5u2v0" path="res://Fonts/TheSans-7_Bold_TRIAL.otf" id="4_kry3j"]
[ext_resource type="Texture2D" uid="uid://nj4w3to3s5ch" path="res://Assets/empty_map.png" id="5_ynf5e"]

[sub_resource type="FontVariation" id="FontVariation_21xkr"]
base_font = ExtResource("4_kry3j")
variation_embolden = 0.21

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
theme = ExtResource("1_kry3j")
script = ExtResource("2_21xkr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -576.0
offset_right = 576.0
offset_bottom = 648.0
color = Color(0.117647, 0.0862745, 0.337255, 1)

[node name="UP Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -510.0
offset_top = 358.0
offset_right = -218.0
offset_bottom = 462.0
texture = ExtResource("3_kry3j")
expand_mode = 2
stretch_mode = 5

[node name="Labels" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.0
offset_top = 41.0
offset_right = 506.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_21xkr")
theme_override_font_sizes/font_size = 60
text = "EVGP Lap 
Simulator"
horizontal_alignment = 1

[node name="Battery" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -556.0
offset_top = 33.0
offset_right = -176.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Battery"
horizontal_alignment = 1

[node name="Settings" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 34.0
offset_right = 187.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Vehicle"
horizontal_alignment = 1

[node name="Map" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 486.0
offset_right = 193.0
offset_bottom = 541.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Map:"
text_overrun_behavior = 3

[node name="Kart" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -519.0
offset_top = 486.0
offset_right = -171.0
offset_bottom = 541.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Profile: "
text_overrun_behavior = 3

[node name="Preview" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 228.0
offset_top = 230.0
offset_right = 514.0
offset_bottom = 285.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Preview:"

[node name="Battery" type="Control" parent="."]
anchors_preset = 0
offset_left = -18.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 41.0

[node name="Capacity" type="LineEdit" parent="Battery"]
layout_mode = 0
offset_left = -500.0
offset_top = 182.0
offset_right = -300.0
offset_bottom = 239.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Battery Charge"

[node name="OptionButton" type="OptionButton" parent="Battery/Capacity"]
layout_mode = 0
offset_left = 212.0
offset_right = 290.0
offset_bottom = 57.0
selected = 0
item_count = 3
popup/item_0/text = "mAh"
popup/item_0/id = 0
popup/item_1/text = "Ah"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2

[node name="Scaling Const" type="LineEdit" parent="Battery"]
layout_mode = 0
offset_left = -499.0
offset_top = 261.0
offset_right = -209.0
offset_bottom = 318.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Scaling Constant"

[node name="Verification" type="LineEdit" parent="Battery"]
layout_mode = 0
offset_left = 237.0
offset_top = 486.0
offset_right = 443.0
offset_bottom = 543.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Known Result"

[node name="OptionButton" type="OptionButton" parent="Battery/Verification"]
layout_mode = 0
offset_left = 213.0
offset_right = 291.0
offset_bottom = 57.0
selected = 0
item_count = 3
popup/item_0/text = "mAh"
popup/item_0/id = 0
popup/item_1/text = "Ah"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2

[node name="Voltage" type="LineEdit" parent="Battery"]
layout_mode = 0
offset_left = -500.0
offset_top = 101.0
offset_right = -210.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Voltage"

[node name="Kart Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 644.0
offset_top = 1.0
offset_right = 684.0
offset_bottom = 41.0

[node name="Max Speed" type="LineEdit" parent="Kart Settings"]
layout_mode = 0
offset_left = -793.0
offset_top = 101.0
offset_right = -599.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Max Speed"

[node name="OptionButton" type="OptionButton" parent="Kart Settings/Max Speed"]
layout_mode = 0
offset_left = 205.0
offset_right = 283.0
offset_bottom = 57.0
selected = 0
item_count = 4
popup/item_0/text = "m/s"
popup/item_0/id = 0
popup/item_1/text = "kph"
popup/item_1/id = 1
popup/item_2/text = "ft/s"
popup/item_2/id = 2
popup/item_3/text = "mph"
popup/item_3/id = 3

[node name="Acceleration" type="LineEdit" parent="Kart Settings"]
layout_mode = 0
offset_left = -793.0
offset_top = 182.0
offset_right = -598.0
offset_bottom = 239.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Acceleration"

[node name="OptionButton" type="OptionButton" parent="Kart Settings/Acceleration"]
layout_mode = 0
offset_left = 206.0
offset_right = 284.0
offset_bottom = 57.0
selected = 0
item_count = 2
popup/item_0/text = "m/s^2"
popup/item_0/id = 0
popup/item_1/text = "ft/s^2"
popup/item_1/id = 1

[node name="Weight" type="LineEdit" parent="Kart Settings"]
layout_mode = 0
offset_left = -793.0
offset_top = 261.0
offset_right = -598.0
offset_bottom = 318.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Weight"

[node name="OptionButton" type="OptionButton" parent="Kart Settings/Weight"]
layout_mode = 0
offset_left = 206.0
offset_right = 284.0
offset_bottom = 57.0
selected = 0
item_count = 3
popup/item_0/text = "kg"
popup/item_0/id = 0
popup/item_1/text = "g"
popup/item_1/id = 1
popup/item_2/text = "lbs"
popup/item_2/id = 2

[node name="Tire Friction Coeff" type="LineEdit" parent="Kart Settings"]
layout_mode = 0
offset_left = -793.0
offset_top = 340.0
offset_right = -508.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Tire Friction Coeff."

[node name="Meta" type="Control" parent="."]
anchors_preset = 0
offset_left = -18.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 41.0

[node name="Save Profile" type="Button" parent="Meta"]
layout_mode = 0
offset_left = -501.0
offset_top = 559.0
offset_right = -338.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 25
text = "Save Profile"

[node name="Load Profile" type="Button" parent="Meta"]
layout_mode = 0
offset_left = -320.0
offset_top = 559.0
offset_right = -154.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 25
text = "Load Profile"

[node name="New Map" type="Button" parent="Meta"]
layout_mode = 0
offset_left = -131.0
offset_top = 559.0
offset_right = 27.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 25
text = "New Map"

[node name="Edit Map" type="Button" parent="Meta"]
layout_mode = 0
offset_left = 44.0
offset_top = 559.0
offset_right = 212.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 25
text = "Edit Map"

[node name="MapPreview" type="TextureRect" parent="Meta"]
layout_mode = 0
offset_left = 237.0
offset_top = 294.0
offset_right = 529.0
offset_bottom = 467.0
texture = ExtResource("5_ynf5e")
expand_mode = 1
stretch_mode = 5

[node name="Run Test" type="Button" parent="Meta"]
layout_mode = 0
offset_left = 237.0
offset_top = 558.0
offset_right = 529.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 25
text = "Run Test
"

[node name="Hints" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = -214.0
offset_top = 193.0
offset_right = -174.0
offset_bottom = 233.0
tooltip_text = "Full charge capacity of the battery, measured in Ampere-Hours (Ah) or Coulombs (C)"
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel2" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = 149.0
offset_top = 352.0
offset_right = 189.0
offset_bottom = 392.0
tooltip_text = "Friction coefficient between tires and ground (perpendicular to direction of vehicle movement)."
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel3" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = 149.0
offset_top = 271.0
offset_right = 189.0
offset_bottom = 311.0
tooltip_text = "Total vehicle weight, including driver."
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel4" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = 149.0
offset_top = 193.0
offset_right = 189.0
offset_bottom = 233.0
tooltip_text = "Maximum speed at which vehicle accelerates."
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel5" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = 150.0
offset_top = 111.0
offset_right = 190.0
offset_bottom = 151.0
tooltip_text = "Maximum speed at which vehicle drives"
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel6" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = -214.0
offset_top = 271.0
offset_right = -174.0
offset_bottom = 311.0
tooltip_text = "Experimentally determined scaling constant. If empty, will be set to 1. Use \"Known Result\" option to determine scaling constant."
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel7" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = 523.0
offset_top = 498.0
offset_right = 563.0
offset_bottom = 538.0
tooltip_text = "The real-life charge consumed on the given map, determined experimentally. If this value exists but no scaling constant is entered, returns a scaling constant. if a scaling constant is also entered, returns an accuracy value. This value is NOT SAVED with the kart profile."
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="RichTextLabel8" type="RichTextLabel" parent="Hints"]
layout_mode = 0
offset_left = -214.0
offset_top = 111.0
offset_right = -174.0
offset_bottom = 151.0
tooltip_text = "Voltage of the battery in Volts."
theme_override_font_sizes/normal_font_size = 25
text = "(?)"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Popup" type="Popup" parent="."]
title = "Results"
initial_position = 2
size = Vector2i(300, 200)
borderless = false
max_size = Vector2i(300, 200)

[node name="Label" type="Label" parent="Popup"]
offset_right = 300.0
offset_bottom = 200.0
text = "Charge Consumed: 10 mAh
Charge remaining: 90%
Expected Lifetime: 15 min
Expected Range: 23 laps
Scaling Constant: 1.223
Accuracy: 83%"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="text_changed" from="Battery/Capacity" to="." method="_on_cc_text_changed"]
[connection signal="text_changed" from="Battery/Scaling Const" to="." method="_on_scaling_const_text_changed"]
[connection signal="text_changed" from="Battery/Verification" to="." method="_on_scaling_const_text_changed"]
[connection signal="text_changed" from="Battery/Voltage" to="." method="_on_scaling_const_text_changed"]
[connection signal="text_changed" from="Kart Settings/Max Speed" to="." method="_on_max_speed_text_changed"]
[connection signal="text_changed" from="Kart Settings/Acceleration" to="." method="_on_acceleration_text_changed"]
[connection signal="text_changed" from="Kart Settings/Weight" to="." method="_on_weight_text_changed"]
[connection signal="text_changed" from="Kart Settings/Tire Friction Coeff" to="." method="_on_tire_friction_coeff_text_changed"]
[connection signal="pressed" from="Meta/Save Profile" to="." method="_on_save_profile_pressed"]
[connection signal="pressed" from="Meta/Load Profile" to="." method="_on_load_profile_pressed"]
[connection signal="pressed" from="Meta/New Map" to="." method="_on_new_map_pressed"]
[connection signal="pressed" from="Meta/Edit Map" to="." method="_on_edit_map_pressed"]
[connection signal="pressed" from="Meta/Run Test" to="." method="_on_run_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
